# GCS-AND-Drone

./: README.md
qt_uav_client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
rk3566/: CMakeLists.txt  config.h  main.c  uart.c  uart.h  udp.c  udp.h  video.c  video.h
